// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prefabToggle should return a selector 1`] = `
Object {
  "pickle": Object {
    "closeAction": Object {
      "payload": Object {
        "construct": "pickle",
      },
      "type": "PREFAB_TOGGLE_OFF",
    },
    "defaultValue": false,
    "doClose": [Function],
    "doHide": [Function],
    "doOpen": [Function],
    "doSet": [Function],
    "doShow": [Function],
    "doToggle": [Function],
    "doTurnOff": [Function],
    "doTurnOn": [Function],
    "doUnset": [Function],
    "hideAction": Object {
      "payload": Object {
        "construct": "pickle",
      },
      "type": "PREFAB_TOGGLE_OFF",
    },
    "isClosed": [Function],
    "isHidden": [Function],
    "isNotSet": [Function],
    "isOff": [Function],
    "isOn": [Function],
    "isOpen": [Function],
    "isSet": [Function],
    "isVisible": [Function],
    "openAction": Object {
      "payload": Object {
        "construct": "pickle",
      },
      "type": "PREFAB_TOGGLE_ON",
    },
    "reduce": [Function],
    "setAction": Object {
      "payload": Object {
        "construct": "pickle",
      },
      "type": "PREFAB_TOGGLE_ON",
    },
    "showAction": Object {
      "payload": Object {
        "construct": "pickle",
      },
      "type": "PREFAB_TOGGLE_ON",
    },
    "toggleAction": Object {
      "payload": Object {
        "construct": "pickle",
      },
      "type": "PREFAB_TOGGLE_SWITCH",
    },
    "toggleName": "pickle",
    "turnOffAction": Object {
      "payload": Object {
        "construct": "pickle",
      },
      "type": "PREFAB_TOGGLE_OFF",
    },
    "turnOnAction": Object {
      "payload": Object {
        "construct": "pickle",
      },
      "type": "PREFAB_TOGGLE_ON",
    },
    "unsetAction": Object {
      "payload": Object {
        "construct": "pickle",
      },
      "type": "PREFAB_TOGGLE_OFF",
    },
  },
}
`;

exports[`prefabToggle should set the defaultValue if provided 1`] = `
Object {
  "pickle": Object {
    "closeAction": Object {
      "payload": Object {
        "construct": "pickle",
      },
      "type": "PREFAB_TOGGLE_OFF",
    },
    "defaultValue": true,
    "doClose": [Function],
    "doHide": [Function],
    "doOpen": [Function],
    "doSet": [Function],
    "doShow": [Function],
    "doToggle": [Function],
    "doTurnOff": [Function],
    "doTurnOn": [Function],
    "doUnset": [Function],
    "hideAction": Object {
      "payload": Object {
        "construct": "pickle",
      },
      "type": "PREFAB_TOGGLE_OFF",
    },
    "isClosed": [Function],
    "isHidden": [Function],
    "isNotSet": [Function],
    "isOff": [Function],
    "isOn": [Function],
    "isOpen": [Function],
    "isSet": [Function],
    "isVisible": [Function],
    "openAction": Object {
      "payload": Object {
        "construct": "pickle",
      },
      "type": "PREFAB_TOGGLE_ON",
    },
    "reduce": [Function],
    "setAction": Object {
      "payload": Object {
        "construct": "pickle",
      },
      "type": "PREFAB_TOGGLE_ON",
    },
    "showAction": Object {
      "payload": Object {
        "construct": "pickle",
      },
      "type": "PREFAB_TOGGLE_ON",
    },
    "toggleAction": Object {
      "payload": Object {
        "construct": "pickle",
      },
      "type": "PREFAB_TOGGLE_SWITCH",
    },
    "toggleName": "pickle",
    "turnOffAction": Object {
      "payload": Object {
        "construct": "pickle",
      },
      "type": "PREFAB_TOGGLE_OFF",
    },
    "turnOnAction": Object {
      "payload": Object {
        "construct": "pickle",
      },
      "type": "PREFAB_TOGGLE_ON",
    },
    "unsetAction": Object {
      "payload": Object {
        "construct": "pickle",
      },
      "type": "PREFAB_TOGGLE_OFF",
    },
  },
}
`;
